# stalingrado

./: .gitignore  :w  CMakeLists.txt  Ente.cpp  Ente.hpp  README.md  Stalingrad.cpp  Stalingrad.hpp  jogador.cpp  jogador.hpp  jogo.cpp  main.cpp  principal.cpp  principal.hpp  refatorar.py  run_game.sh  stalingrado.mdj
Entidades/: Entidade.cpp  Entidade.hpp
Entidades/Obstaculos/: Obstaculo.cpp  Obstaculo.hpp
Entidades/Obstaculos/Arame_farp/: Arame_farp.cpp  Arame_farp.hpp
Entidades/Obstaculos/Entulho/: Entulho.cpp  Entulho.hpp
Entidades/Obstaculos/Explosivo/: Explosivo.cpp  Explosivo.hpp
Entidades/Personagens/: Inimigo.cpp  Inimigo.hpp  Personagem.cpp  Personagem.hpp
Entidades/Personagens/Inim_chefao/: Inim_chefao.cpp  Inim_chefao.hpp
Entidades/Personagens/Inim_facil/: Inim_facil.cpp  Inim_facil.hpp
Entidades/Personagens/Inim_medio/: Inim_medio.cpp  Inim_medio.hpp
Entidades/Personagens/Jogador/: Jogador.cpp  Jogador.hpp
Entidades/Projetil/: Projetil.hpp
Fases/: fase.cpp  fase.hpp
Gerenciadores/: Gerenciador_Grafico.hpp  Gerenciador_colisoes.hpp  Gerenciador_grafico.cpp  Gerenciador_grafico.hpp  Gerenciadores.cpp  Gerenciadores.hpp
Informações Acadêmicas/: Leiame.txt
Informações Acadêmicas/Entrega_Final/: .~lock.Relatorio#  Relatorio  Relatorio.docx  UML_Final.mdj
Listas/: Lista_entidades.hpp  listas.hpp
stalingrado/: Defines.txt  Ente.cpp  Ente.hpp  Jogo.cpp  Jogo.hpp  Menu.cpp  Menu.hpp  Stalingrad.cpp  Stalingrad.hpp
stalingrado/Controle/: ControleMenu.hpp  Observer.cpp  Observer.hpp  TextInput.hpp
stalingrado/Entidades/: Chao.cpp  Chao.hpp  Entidade.cpp  Entidade.hpp  Parede.cpp  Parede.hpp  Projetil.cpp  Projetil.hpp
stalingrado/Entidades/Obstaculos/: Arame_farp.cpp  Arame_farp.hpp  Entulho.cpp  Entulho.hpp  Explosivo.cpp  Explosivo.hpp  Obstaculo.cpp  Obstaculo.hpp
stalingrado/Entidades/Obstaculos/Arame_farp/: Arame_farp.cpp  Arame_farp.hpp
stalingrado/Entidades/Obstaculos/Entulho/: Entulho.cpp  Entulho.hpp
stalingrado/Entidades/Personagens/: Inim_chefao.cpp  Inim_chefao.hpp  Inim_facil.cpp  Inim_facil.hpp  Inim_medio.cpp  Inim_medio.hpp  Inimigo.cpp  Inimigo.hpp  Jogador.cpp  Jogador.hpp  Personagem.cpp  Personagem.hpp
stalingrado/Entidades/Projetil/: Projetil.cpp  Projetil.hpp
stalingrado/Fases/: Fase_prim.cpp  Fase_prim.hpp  Fase_seg.cpp  Fase_seg.hpp  fase.cpp  fase.hpp
stalingrado/Gerenciadores/: Gerenciador_colisoes.cpp  Gerenciador_colisoes.hpp  Gerenciador_eventos.hpp  Gerenciador_grafico.cpp  Gerenciador_grafico.hpp  Gerenciador_input.cpp  Gerenciador_input.hpp
stalingrado/Graficos/: Botao.cpp  Botao.hpp  Texto.cpp  Texto.hpp
stalingrado/Gráficos/: Botao.cpp  Botao.hpp  Texto.cpp  Texto.hpp
stalingrado/Listas/: Lista_entidades.cpp  Lista_entidades.hpp  listas.hpp
stalingrado/Menus/: Botao.cpp  Botao.hpp  Menu.cpp  Menu.hpp  MenuGameOver.cpp  MenuGameOver.hpp  MenuInicial.cpp  MenuInicial.hpp  MenuPausa.cpp  MenuPausa.hpp  MenuRanking.cpp  MenuRanking.hpp
stalingrado/Saves/: ranking.txt  save.txt
stalingrado/States/: Jogo.cpp  Jogo.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
stalingrado/States/Fases/: Fase_prim.cpp  Fase_prim.hpp  Fase_seg.cpp  Fase_seg.hpp  fase.cpp  fase.hpp
stalingrado/assets/: coord_botoes.txt  texturas.txt
stalingrado/assets/fase1/: Inimigos.txt  Obstaculos.txt
stalingrado/assets/fase2/: Inimigos.txt  Obstaculos.txt
(+10 files in other folders)
